hosts/cluster/config/vpn-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-external
  namespace: headscale
spec:
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: headscale-external
  namespace: headscale
subsets:
  - addresses:
      - ip: 192.168.88.252
    ports:
      - port: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ingress
  namespace: headscale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: tail.booulder.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale-external
                port:
                  number: 9090
  tls:
    - hosts:
        - tail.booulder.xyz
      secretName: headscale-tls
